--- a/Alpilean/index.html
+++ b/Alpilean/index.html
@@ -5,7 +5,7 @@
 <!-- Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
-    <title>Alexlpilean™ | Pay Only $39/Bottle</title>
+    <title>Alpilean™ | Pay Only $39/Bottle</title>
     <meta charset="UTF-8">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
